
[TestPrintJSONResults_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_no_license_violations - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.3.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "Apache-2.0"
          ],
          "license_violations": [
            "Apache-2.0"
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.3.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations#01 - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT",
            "Apache-2.0"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "UNKNOWN"
          ],
          "license_violations": [
            "UNKNOWN"
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          },
          "licenses": [
            "Apache-2.0"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.3.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "Apache-2.0"
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_some_license_violations - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "Packagist"
          },
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "Apache-2.0"
          ],
          "license_violations": [
            "Apache-2.0"
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.3.5",
            "ecosystem": "NuGet"
          },
          "licenses": [
            "ISC"
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "Packagist"
          },
          "dependency_groups": [
            "dev"
          ],
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages_and_groups,_some_license_violations - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "dev",
            "optional"
          ],
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "dev",
            "optional"
          ],
          "licenses": [
            "Apache-2.0"
          ],
          "license_violations": [
            "Apache-2.0"
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.3.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "build"
          ],
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/multiple_sources_with_no_packages - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": []
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": []
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": []
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/no_sources - 1]
{
  "results": [],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/one_source_with_no_packages - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": []
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/one_source_with_one_package,_no_license_violations - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/one_source_with_one_package,_no_licenses - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          }
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/one_source_with_one_package_and_an_unknown_license - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "UNKNOWN"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/one_source_with_one_package_and_multiple_license_violations - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT",
            "Apache-2.0"
          ],
          "license_violations": [
            "MIT",
            "Apache-2.0"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/one_source_with_one_package_and_one_license_violation - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/one_source_with_one_package_and_one_license_violation_(dev) - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "dev"
          ],
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithLicenseViolations/two_sources_with_packages,_one_license_violation - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "5.9.0",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities_and_license_violations - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ],
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-2",
              "summary": "Something less scary!",
              "severity": [
                {
                  "type": "low",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-2"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ],
          "licenses": [
            "ISC"
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          },
          "licenses": [
            "ISC"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.3.5",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ],
          "licenses": [
            "Apache-2.0"
          ],
          "license_violations": [
            "Apache-2.0"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithMixedIssues/one_source_with_one_package,_one_vulnerability,_and_one_license_violation - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ],
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithMixedIssues/two_sources_with_packages,_one_vulnerability,_one_license_violation - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ],
          "licenses": [
            "ISC"
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "5.9.0",
            "ecosystem": "npm"
          },
          "licenses": [
            "MIT"
          ],
          "license_violations": [
            "MIT"
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": [
        "ISC"
      ]
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_grouped_packages,_and_multiple_vulnerabilities - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "dev",
            "optional"
          ],
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            },
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-5",
              "summary": "Something scarier!",
              "severity": [
                {
                  "type": "extreme",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            },
            {
              "ids": [
                "OSV-5"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.2",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "dev"
          ],
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-2",
              "summary": "Something less scary!",
              "severity": [
                {
                  "type": "low",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-2"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "build"
          ],
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-3",
              "summary": "Something mildly scary!",
              "severity": [
                {
                  "type": "medium",
                  "score": "1"
                }
              ]
            },
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-5",
              "summary": "Something scarier!",
              "severity": [
                {
                  "type": "extreme",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-3"
              ],
              "aliases": null,
              "max_severity": ""
            },
            {
              "ids": [
                "OSV-5"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_and_multiple_vulnerabilities - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            },
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-5",
              "summary": "Something scarier!",
              "severity": [
                {
                  "type": "extreme",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            },
            {
              "ids": [
                "OSV-5"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.2",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-2",
              "summary": "Something less scary!",
              "severity": [
                {
                  "type": "low",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-2"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-3",
              "summary": "Something mildly scary!",
              "severity": [
                {
                  "type": "medium",
                  "score": "1"
                }
              ]
            },
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-5",
              "summary": "Something scarier!",
              "severity": [
                {
                  "type": "extreme",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-3"
              ],
              "aliases": null,
              "max_severity": ""
            },
            {
              "ids": [
                "OSV-5"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_no_vulnerabilities - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          }
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          }
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          }
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.3.5",
            "ecosystem": "npm"
          }
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          }
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-2",
              "summary": "Something less scary!",
              "severity": [
                {
                  "type": "low",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-2"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "npm"
          }
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.3.5",
            "ecosystem": "npm"
          }
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "Packagist"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            },
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-5",
              "summary": "Something scarier!",
              "severity": [
                {
                  "type": "extreme",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            },
            {
              "ids": [
                "OSV-5"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        },
        {
          "package": {
            "name": "mine1",
            "version": "1.2.2",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "3.2.5",
            "ecosystem": "NuGet"
          },
          "dependency_groups": [
            "dev"
          ],
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-2",
              "summary": "Something less scary!",
              "severity": [
                {
                  "type": "low",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-2"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.4.1",
            "ecosystem": "Packagist"
          },
          "dependency_groups": [
            "build"
          ],
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-3",
              "summary": "Something mildly scary!",
              "severity": [
                {
                  "type": "medium",
                  "score": "1"
                }
              ]
            },
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-5",
              "summary": "Something scarier!",
              "severity": [
                {
                  "type": "extreme",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-3"
              ],
              "aliases": null,
              "max_severity": ""
            },
            {
              "ids": [
                "OSV-5"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/multiple_sources_with_no_packages - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": []
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": []
    },
    {
      "source": {
        "path": "path/to/my/third/lockfile",
        "type": ""
      },
      "packages": []
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/no_sources - 1]
{
  "results": [],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/one_source_with_no_packages - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": []
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/one_source_with_one_package,_no_vulnerabilities - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          }
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability_(dev) - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "dev"
          ],
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_vulnerability - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            },
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "GHSA-123",
              "aliases": [
                "OSV-1"
              ],
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1",
                "GHSA-123"
              ],
              "aliases": [
                "OSV-1",
                "GHSA-123"
              ],
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/one_source_with_vulnerabilities,_some_missing_content - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "details": "This vulnerability allows for some very scary stuff to happen - seriously, you'd not believe it!"
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        },
        {
          "package": {
            "name": "mine3",
            "version": "0.10.2-rc",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-2"
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-2"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/two_sources_with_packages,_one_vulnerability - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine2",
            "version": "5.9.0",
            "ecosystem": "npm"
          }
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---

[TestPrintJSONResults_WithVulnerabilities/two_sources_with_the_same_vulnerable_package - 1]
{
  "results": [
    {
      "source": {
        "path": "path/to/my/first/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "path/to/my/second/lockfile",
        "type": ""
      },
      "packages": [
        {
          "package": {
            "name": "mine1",
            "version": "1.2.3",
            "ecosystem": "npm"
          },
          "dependency_groups": [
            "dev"
          ],
          "vulnerabilities": [
            {
              "modified": "0001-01-01T00:00:00Z",
              "id": "OSV-1",
              "summary": "Something scary!",
              "severity": [
                {
                  "type": "high",
                  "score": "1"
                }
              ]
            }
          ],
          "groups": [
            {
              "ids": [
                "OSV-1"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}

---
